<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".CreateTodo">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_tInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_date"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_timesette"
        app:layout_constraintStart_toStartOf="@+id/et_tInputLayout"
        app:layout_constraintTop_toTopOf="@+id/et_timesette" />
    <Button
        android:id="@+id/et_timesette"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/set_time"
        app:layout_constraintEnd_toEndOf="@+id/et_tInputLayout"
        app:layout_constraintTop_toBottomOf="@id/et_tInputLayout"
        />
    <Button
        android:id="@+id/et_addBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_todos"
        app:layout_constraintEnd_toEndOf="@id/et_timesette"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="@+id/btn_date"
        app:layout_constraintTop_toBottomOf="@+id/et_tInputLayout" />


    <ImageView
        android:id="@+id/imgView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tInputLayout"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>